# uTox

./: CMakeLists.txt
src/: chatlog.c
src/av/: CMakeLists.txt
src/layout/: userbadge.c
src/xlib/: CMakeLists.txt
